separated partials for readability. corrected menu logic so works no matter how fast.

--- a/src/render/css/local.css.styl
+++ b/src/render/css/local.css.styl
@@ -9,10 +9,13 @@ div.box.alt
     z-index: 10
 ul.copyright
   margin-top: 0 !important
+  display:
   & li
     display: block !important
 ul.icons.qcif
   text-align: center !important
+div.qcif.image
+  display: inline-block !important
   & li
     padding-left: 5px !important
     padding-right: 5px !important
